--- a/resolution.tex
+++ b/resolution.tex
@@ -34,13 +34,13 @@ The sensitivity of the Community Atmosphere Model \citep[CAM;][]{CAM5}, and its 
 
 In CAM/CCM, the atmosphere progressively dries with increasing resolution, seen through a reduction in simulated total precipitable water \citep{KW1991JGR,WETAL1995CD,W2008TELLUS,RETAL2013JCLIM,ZetAl2014JCb,HR2017JCLIM}, which typically, but not always \citep[see][]{WETAL1995CD,ZetAl2014JCb}, coincides with a reduction in cloud cover. \cite{KW1991JGR} and \cite{WETAL1995CD} suggested that the drying of the atmosphere is due to greater magnitude resolved vertical velocities with increasing resolution, with greater subsiding motion increasing the export of dry air from the upper troposphere. This mechanism is consistent with an analysis of moisture budgets in CAM, version 4 \citep[CAM4;][]{CAM4} across multiple resolutions \citep{YETAL2014JCLIM,HR2017JCLIM}.
 
-It is well known that the magnitude of vertical velocities increase with resolution in atmospheric models. While the cause of this sensitivity has been established for large-eddy simulations \citep[see][and references therein]{J2017JAMES}, only recently has the vertical velocity field in AGCMs and their sensitivity to resolution received attention \citep{DETALA2016ACP,OETAL2016JAMES}, albeit with conflicting explanations \citep{RETAL2016CD,HR2018JAMES}. To generalize the relationship between vertical velocity and resolution, let $\alpha$ refer to the ratio of $W_0$, the vertical velocity scale of some reference grid spacing $\Delta x_0$, to $W$, the vertical velocity scale of any $\Delta x$. A power law for $\alpha$ in $\Delta x$ is then,
+It is well known that the magnitude of vertical velocities increase with resolution in atmospheric models. While the cause of this sensitivity has been established for large-eddy simulations \citep[see][and references therein]{J2017JAMES}, only recently has the vertical velocity field in AGCMs and their sensitivity to resolution received attention \citep{DETALA2016ACP,OETAL2016JAMES}, albeit with conflicting explanations \citep{RETAL2016CD,HR2018JAMES}. To generalize the relationship between vertical velocity and resolution, let $\alpha$ refer to the ratio of $W_0$, the vertical velocity scale of some reference grid spacing $\Delta x_0$, to $W$, the vertical velocity scale of any $\Delta x$. A power law for $\alpha^{-1}$ in $\Delta x$ is then,
 \begin{equation}
-\alpha = \frac{W_0}{W} = \left( \frac{\Delta x_0}{\Delta x} \right)^n, \label{eq:alpha}
+\alpha^{-1} = \frac{W}{W_0} = \left( \frac{\Delta x}{\Delta x_0} \right)^n, \label{eq:alpha}
 \end{equation}
 where $n$ is the power law exponent. 
 
-\cite{RETAL2016CD} derive an estimate $n= b-1$ by combining a scale analysis of the continuity equation with a power law representation $\Delta x^{2b}$ of the second-order structure function of the horizontal wind. Strictly speaking, $\Delta x$ here refers to the distance between two points for which the velocity increment is computed in the structure function, but with this distance set to the model grid-spacing. Observations indicate that $b=\frac{1}{3}$ for scales less than about $1000$ km \citep{CETAL1999JGR}, which according to the Weiner–Khinchin theorem $- \left( 2b+1 \right) = -\frac{5}{3}$ is equal to the slope of the kinetic energy spectrum, which is supported by observations of mesoscale flow \citep{NG1985JAS}. \cite{RETAL2016CD} argue that the $-\frac{5}{3}$ slope being common in both observations and models provides an emergent constraint for $b=\frac{1}{3}$ and $n= -\frac{2}{3}$.
+\cite{RETAL2016CD} derive an estimate $n= b-1$ by combining a scale analysis of the continuity equation with a power law representation $\Delta x^{2b}$ of the second-order structure function of the horizontal wind. Strictly speaking, $\Delta x$ here refers to the distance between two points for which the velocity increment is computed in the structure function, but with this distance set to the model grid-spacing. Observations indicate that $b=\frac{1}{3}$ for scales less than about $1000$ km \citep{CETAL1999JGR}, which according to the Weiner–Khinchin theorem $- \left( 2b+1 \right) = -\frac{5}{3}$ is equal to the slope of the kinetic energy spectrum, and supported by observations of mesoscale flow \citep{NG1985JAS}. \cite{RETAL2016CD} argue that the $-\frac{5}{3}$ slope being common in both observations and models provides an emergent constraint for $b=\frac{1}{3}$ and $n= -\frac{2}{3}$.
 
 In large-eddy simulations, the sensitivity of vertical velocities to resolution is adequately explained by a scale analysis of the dynamical equations \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}. For hydrostatic scales relevant to AGCMs, a scale analysis of the Poisson equation gives $W \propto D^{-1}$, where $D$ is the horizontal scale of a buoyancy perturbation driving vertical motion \citep{HR2018JAMES}. In CAM aqua-planet simulations, the largest source of buoyancy is from grid-scale cloud formation, whose horizontal extents are set by the effective resolution of the model (i.e., some multiple of $\Delta x$), indicating $n=-1$ \citep{HR2018JAMES}. \cite{HR2017JCLIM} has shown that the $n=-1$ scaling does not explain the behavior of CAM4 in a convergence experiment, but follow-up studies \citep{HR2018JAMES,HETAL2019JAMES} indicate that the inadequacy of the $n=-1$ scaling is not definitive, due to time-truncation errors associated with fixing the physics time-step ($\Delta t_{phys}$) across resolutions in that study.
 
@@ -134,13 +134,7 @@ The global mean, climatological components $\langle f_{u} \rangle \, \langle \om
 
 \subsection{Vertical Velocities and Convective Precipitation}
 
-The large increase in magnitude of the upward and downward vertical velocities with resolution may be expected to impact the behavior of other model components. The \cite{ZM1995AO} deep convection scheme (referred to as the $ZM$ scheme hereafter) is modulated by the dilute CAPE calculation, a modified form of the traditional CAPE, which is shown to be sensitive to the vertical velocity field in an analysis of a large eddy simulation \citep{SZ2018JCLIM}. 
-
-The relationship between vertical velocities and CAPE falls out of the CAPE equation itself (F. Song, personal communication). The CAPE budget can be separated into two components \citep{Z2002JGR}; instability due to the thermodynamic state of parcels in the boundary layer and the instability generated through radiative cooling and advection of dry static energy and moisture by the environment, i.e., the resolved flow. The latter term is defined as, 
-\begin{equation}
--R_d \int_{p_t}^{p_b} \frac{\partial T_{ve}}{\partial t} dlnp \label{eq:cape}
-\end{equation}
-where $T_{ve}$ is the virtual temperature of the environment, $R_d$ the gas constant for dry air and subscripts $b$ and $t$ refer to the parcel launch level (typically in the boundary layer) and the level of neutral buoyancy, respectively \citep{Z2002JGR}. Equation~\ref{eq:cape} shows that warming the environment reduces CAPE though reducing the buoyancy of lifted air parcels. The $T_{ve}$ budget contains a term; the vertical advection of potential energy, which simplifies to $\frac{w}{c_{pd}} \frac{\partial gz}{\partial z} = \frac{g}{c_{pd}} w$, and directly proportional to the vertical velocity $w$ by the factor $\frac{g}{c_{pd}}$, with $g$ the acceleration of gravity and $c_{pd}$ the specific heat capacity of dry air (F. Song, personal communication). In subsiding regions, $w$ is negative and opposes the generation of CAPE through adiabatic warming of the environment.
+The large increase in magnitude of the upward and downward vertical velocities with resolution may be expected to impact the behavior of other model components. Curiously, there is an excellent negative correlation (Pearson's R-value = 0.99) between the global mean, climatological $\langle f_{d} \rangle \, \langle \omega_{d} \rangle$ and a measure of the activity of the \cite{ZM1995AO} deep convection scheme (referred to as the $ZM$ scheme hereafter), global mean, climatological $FREQZM$ (Figure~\ref{fig:corr}). At any given grid-point and time-step, $FREQZM$ is a binary variable: one if the ZM scheme is active, zero if it is not. Time mean $FREQZM$ is therefore the fraction of the model time that the ZM scheme is triggered, i.e., dilute CAPE exceeds $\geq 70$ J/kg. In addition to the six simulations used in the convergence experiment, an ensemble of 24 additional simulations containing different model parameters (e.g., using the lower resolution physics grid) and across different resolutions are used, increasing confidence in the relationship between subsidence and convective activity.
 
 \begin{figure}
 \begin{center}
@@ -150,9 +144,11 @@ where $T_{ve}$ is the virtual temperature of the environment, $R_d$ the gas cons
 \label{fig:corr}
 \end{figure}
 
-There is an excellent negative correlation (Pearson's R-value = 0.99) between the global mean, climatological $\langle f_{d} \rangle \, \langle \omega_{d} \rangle$ and a measure of the activity of the ZM scheme in the simulations, global mean, climatological $FREQZM$ (Figure~\ref{fig:corr}). At any given grid-point and time-step, $FREQZM$ is a binary variable: one if the ZM scheme is active, zero if it is not. Time-mean $FREQZM$ therefore indicates the fraction of the model time that the ZM scheme is triggered, i.e., dilute CAPE exceeds $\geq 70$ J/kg. It is hypothesized that the greater subsiding motion with resolution opposes the generation of dilute CAPE through subsidence warming, reducing the frequency the ZM scheme is triggered, and creating the strong negative correlation in Figure~\ref{fig:corr}.
-
-\subsection{Hypothesis Testing}
+To further understand this relationship, a logistic regression between $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and $FREQZM$ is performed for each grid column within each of the simulations. Logistic regression uses an iterative method to fit a continuous variable predictor, $x$ to a binary predictand $p$ through the exponential \citep{WILKSBOOK},
+\begin{equation}
+p = \frac{exp{[b_0 + b_1 x]}}{1 + exp{[b_0 + b_1 x]}}, \label{eq:eq6-3}
+\end{equation}
+where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor is then the instantaneous $\langle f_{d} \rangle \langle \omega_{d} \rangle$ of a grid column, and the predictand the binary $FREQZM$. The assumption is then that subsidence is the independent variable, which the authors believe is reasonable given subsiding regions are generally more stable, and so dilute CAPE is likely smaller compared with ascending regions. Grid column regressions that are statistically significant at the $95\%$ level using a log-likelihood test \citep{WILKSBOOK} are retained for analysis. Since the aqua-planets have zonally symmetric boundary conditions, there is a zonally varying structure in the goodness of fit (R-value) and parameter $b_1$ (hereafter referred to as the sensitivity parameter; Figure~\ref{fig:4zonal}a,b).
 
 \begin{figure}
 \begin{center}
@@ -162,15 +158,9 @@ There is an excellent negative correlation (Pearson's R-value = 0.99) between th
 \label{fig:4zonal}
 \end{figure}
 
-To test the hypothesis, a logistic regression between subsiding motion and $FREQZM$ is performed for each grid column within each of the simulations. Logistic regression uses an iterative method to fit a continuous variable predictor, $x$ to a binary predictand $p$ through the exponential \citep{WILKSBOOK},
-\begin{equation}
-p = \frac{exp{[b_0 + b_1 x]}}{1 + exp{[b_0 + b_1 x]}}, \label{eq:eq6-3}
-\end{equation}
-where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor is then the instantaneous $\langle f_{d} \rangle \langle \omega_{d} \rangle$ of a grid column, and the predictand the binary $FREQZM$. Grid column regressions that are statistically significant at the $95\%$ level using a log-likelihood test \citep{WILKSBOOK} are retained for analysis. Since the aqua-planets have zonally symmetric boundary conditions, there is a zonally varying structure in the goodness of fit (R-value) and parameter $b_1$ (hereafter referred to as the sensitivity parameter; Figure~\ref{fig:4zonal}a,b).
+The zonal mean R-values indicate the greatest goodness of fit in the $\pm 10^{\circ}$ latitude band, hereafter referred to as the deep Tropics. Figure~\ref{fig:4zonal}c shows the climatological, zonal-mean latent heat flux in the simulations, which is expected to contribute positively to the component of dilute CAPE associated with the thermodynamic state of boundary layer parcels \citep{Z2002JGR}. In the deep Tropics, latent heat fluxes are small, and the sensitivity parameter is large and negative (Figure~\ref{fig:4zonal}b), consistent with the idea that subsiding motion actively depresses dilute CAPE and the activity of the ZM scheme in the simulations. The sensitivity parameter becomes less negative in the deep Tropics with resolution, likely due to the greater magnitude $\langle f_{d} \rangle \langle \omega_{d} \rangle$ with resolution, which requires a lower sensitivity parameter to predict the binary $FREQZM$. The R-values generally decrease with resolution indicating that there is degradation in the relationship with resolution.
 
-The zonal mean R-values indicate the greatest goodness of fit in the $\pm 10^{\circ}$ latitude band, referred to as the deep Tropics hereafter. Figure~\ref{fig:4zonal}c shows the climatological, zonal-mean latent heat flux in the simulations, which is expected to contribute positively to CAPE through the component associated with the thermodynamic state of boundary layer parcels. In the deep Tropics, latent heat fluxes are small, and the sensitivity parameter is large and negative (Figure~\ref{fig:4zonal}b), which is consistent with our hypothesis that the subsiding motion actively depresses CAPE and the activity of the ZM scheme in the simulations. The sensitivity parameter becomes less negative in the deep Tropics with resolution, likely due to the greater magnitude $\langle f_{d} \rangle \langle \omega_{d} \rangle$ with resolution, which requires a lower sensitivity parameter to predict the binary of whether the ZM scheme is active. The R-values generally decrease with resolution indicating that there is degradation in the relationship with resolution.
-
-Table~\ref{tbl:table2} shows that fractional contribution of the deep Tropics to the climatological, global mean change in convective precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep Tropics (except in going from $ne20$ to $ne30$, where deep Tropical convective precipitation rates increase with resolution due to an extremely wide double-ITCZ in the $ne20$ simulation that spans well outside of $\pm 10^{\circ}$ latitude). Expanding the latitudes of consideration marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occur in this region (again, ignoring $ne20$). Taken together, the region with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme, providing further evidence in support of the hypothesis.
+Table~\ref{tbl:table2} shows the fractional contribution of the deep Tropics to the climatological, global mean change in convective precipitation with resolution. This is a reflection of changes in the partitioning of the Intertropical Convergence Zone (ITCZ) between convective and stratiform precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep Tropics (except in going from $ne20$ to $ne30$, where deep Tropical convective precipitation rates increase with resolution due to an extremely wide double-ITCZ in the $ne20$ simulation that spans well outside of $\pm 10^{\circ}$ latitude). Expanding the latitudes of consideration marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occur in this region (again, ignoring $ne30-ne20$). Taken together, the region with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme.
 
  \begin{table}
  \caption{Fractional contribution of latitude bands $\pm 10^{\circ}$ and $\pm 15^{\circ}$ to changes in global mean precipitation with resolution. The grid headers refer to differences with respect to the next lowest grid resolution, e.g., $ne30 = ne30-ne20$, $ne40=ne40-ne30$, etc..., and computed through remapping all data to the $ne20$ grid.}
@@ -192,7 +182,7 @@ Table~\ref{tbl:table2} shows that fractional contribution of the deep Tropics to
  \label{tbl:table2}
  \end{table}
 
-To understand how subsiding motion and dilute CAPE vary with resolution in the deep Tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$, the mass-weighted vertical integral of $\omega$, is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep Tropics, with resolution. The ascending regions are associated with larger values of CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the CAPE value computed for mean conditions over the entire deep Tropics decrease monotonically with resolution, consistent with the reduction in convective activity with resolution. The space-time weights associated with ascending and descending grid columns in the deep Tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights vary from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. The increasing occurrence of stable, subsiding grid columns with resolution results in a reduction in CAPE for the entire deep Tropics, verified by the similar CAPE values produced through taking the weighted sum of the ascending/descending CAPE values (grey crosses in Figure~\ref{fig:cape}a).
+To estimate the dilute CAPE values associated with subsiding motion in the deep Tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$, the mass-weighted vertical integral of $\omega$, is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep Tropics, with resolution. The ascending regions are associated with larger values of CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the CAPE value computed for mean conditions over the entire deep Tropics decrease monotonically with resolution, consistent with the reduction in convective activity with resolution. The space-time weights associated with ascending and descending grid columns in the deep Tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights vary from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. The increasing occurrence of stable, subsiding grid columns with resolution results in a reduction in CAPE for the entire deep Tropics, verified by the similar CAPE values produced through taking the weighted sum of the ascending/descending CAPE values (grey crosses in Figure~\ref{fig:cape}a).
 
 \begin{figure}
 \begin{center}
@@ -202,7 +192,7 @@ To understand how subsiding motion and dilute CAPE vary with resolution in the d
 \label{fig:cape}
 \end{figure}
 
-Figure~\ref{fig:profiles} shows the climatological temperature and specific humidity profiles of subsiding grid cells in the deep Tropics, presented as anomalies from the mean temperature and specific humidity of the entire deep Tropics. The mean profiles of subsiding regions have an anomalous warming layer in the $600-800$ hPa layer and an anomalous moisture deficit throughout the entire column. To test the hypothesis, one needs to establish the relative importance of drying and warming of the environment on dilute CAPE. While warming the environment clearly opposes the growth of dilute CAPE (equation~\ref{eq:cape}), the impact of drying the environment on dilute CAPE is less clear. One may speculate that their are competing influences; increasing dilute CAPE through reducing $T_{ve}$ and opposing dilute CAPE through mixing drier environmental air into a rising air parcel, reducing the moisture available to condense and warming the parcel through latent heating. An experiment is then carried out, in which dilute CAPE is computed using the moisture profile derived from the entire of deep Tropics and temperature profile associated with descending regions, and vice versa.
+Figure~\ref{fig:profiles} shows the climatological temperature and specific humidity profiles of subsiding grid cells in the deep Tropics, presented as anomalies from the mean temperature and specific humidity of the entire deep Tropics. The mean profiles of subsiding regions have an anomalous warming layer in the $600-800$ hPa layer and an anomalous moisture deficit throughout the entire column. This warming and drying patterns is consistent with the effects of subsidence, whose motion results in adiabatic warming and the advection of drier, upper-troposphere air downward. Both warming and drying the environment oppose the growth of dilute CAPE through reducing parcel buoyancy; warming the environment relative to the parcel temperature reduces parcel buoyancy \citep{Z2002JGR}, while mixing drier environmental air into a rising air parcel reduces the moisture available to warm the parcel through latent heating \citep{RB1992JAS}. 
 
 \begin{figure}
 \begin{center}
@@ -211,6 +201,15 @@ Figure~\ref{fig:profiles} shows the climatological temperature and specific humi
 \caption{}
 \label{fig:profiles}
 \end{figure}
+
+An experiment is carried out to unravel the contributions of warming or drying to dilute CAPE values of subsiding grid columns. Dilute CAPE is re-computed for descending/ascending regions, but using the mean specific humidity profile derived from the entire deep Tropics. Then the opposite is performed, computing dilute CAPE using the ascending/descending regions specific humidity but with the temperature profile from the entire deep Tropics.
+
+
+%The dilute CAPE calculation is a modified form of the traditional CAPE, which is shown to be sensitive to the vertical velocity field in an analysis of a large eddy simulation \citep{SZ2018JCLIM}. A relationship between vertical velocities and CAPE falls out of the CAPE equation itself (F. Song, personal communication). The CAPE budget can be separated into two components \citep{Z2002JGR}; instability due to the thermodynamic state of parcels in the boundary layer and the instability generated through radiative cooling and advection of dry static energy and moisture by the environment, i.e., the resolved flow. The latter term is defined as, 
+%\begin{equation}
+%-R_d \int_{p_t}^{p_b} \frac{\partial T_{ve}}{\partial t} dlnp \label{eq:cape}
+%\end{equation}
+%where $T_{ve}$ is the virtual temperature of the environment, $R_d$ the gas constant for dry air and subscripts $b$ and $t$ refer to the parcel launch level (typically in the boundary layer) and the level of neutral buoyancy, respectively \citep{Z2002JGR}. Equation~\ref{eq:cape} shows that warming the environment reduces CAPE though reducing the buoyancy of lifted air parcels. The $T_{ve}$ budget contains a term; the vertical advection of potential energy, which simplifies to $\frac{w}{c_{pd}} \frac{\partial gz}{\partial z} = \frac{g}{c_{pd}} w$, and directly proportional to the vertical velocity $w$ by the factor $\frac{g}{c_{pd}}$, with $g$ the acceleration of gravity and $c_{pd}$ the specific heat capacity of dry air. In subsiding regions, $w$ is negative and opposes the generation of CAPE through adiabatic warming of the environment.
 
 \subsection{Convection Biases Independent of Resolution}
 
