--- a/resolution.tex
+++ b/resolution.tex
@@ -134,7 +134,7 @@ The global mean, climatological components $\langle f_{u} \rangle \, \langle \om
 
 \subsection{Vertical Velocities and Convective Precipitation}
 
-The large increase in magnitude of the upward and downward vertical velocities with resolution may be expected to impact the behavior of other model components. Curiously, there is an excellent negative correlation (Pearson's R-value = 0.99) between the global mean, climatological $\langle f_{d} \rangle \, \langle \omega_{d} \rangle$ and a measure of the activity of the \cite{ZM1995AO} deep convection scheme (referred to as the $ZM$ scheme hereafter), global mean, climatological $FREQZM$ (Figure~\ref{fig:corr}). At any given grid-point and time-step, $FREQZM$ is a binary variable: one if the ZM scheme is active, zero if it is not. Time mean $FREQZM$ is therefore the fraction of the model time that the ZM scheme is triggered, i.e., dilute CAPE exceeds $\geq 70$ J/kg. In addition to the six simulations used in the convergence experiment, an ensemble of 24 additional simulations containing different model parameters (e.g., using the lower resolution physics grid) and across different resolutions are used, increasing confidence in the relationship between subsidence and convective activity.
+The large increase in magnitude of the upward and downward vertical velocities with resolution may be expected to impact the behavior of other model components. Curiously, there is an excellent negative correlation (Pearson's R-value = 0.99) between the global mean, climatological $\langle f_{d} \rangle \, \langle \omega_{d} \rangle$ and a measure of the activity of the \cite{ZM1995AO} deep convection scheme (referred to as the {\em{ZM scheme}} hereafter), global mean, climatological $FREQZM$ (Figure~\ref{fig:corr}). At any given grid-point and time-step, $FREQZM$ is a binary variable: one if the ZM scheme is active, zero if it is not. Time mean $FREQZM$ is therefore the fraction of the model time that the ZM scheme is triggered, i.e., dilute CAPE exceeds $\geq 70$ J/kg. In addition to the six simulations used in the convergence experiment, an ensemble of 24 additional simulations containing different model parameters (e.g., using the lower resolution physics grid) and across different resolutions are used, increasing confidence in the relationship between subsidence and convective activity.
 
 \begin{figure}
 \begin{center}
